--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-click            8.0.1
-colorama         0.4.4
-Flask            2.0.1
-Flask-SQLAlchemy 2.5.1
-Flask-WTF        0.15.1
-greenlet         1.1.1
-itsdangerous     2.0.1
-Jinja2           3.0.1
-MarkupSafe       2.0.1
-pip              20.2.3
-setuptools       49.2.1
-SQLAlchemy       1.4.22
-Werkzeug         2.0.1
-WTForms          2.3.3
+click==8.0.1
+colorama==0.4.4
+Flask==2.0.1
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==0.15.1
+greenlet==1.1.1
+itsdangerous==2.0.1
+Jinja2==3.0.1
+MarkupSafe==2.0.1
+pip==20.2.3
+setuptools==49.2.1
+SQLAlchemy==1.4.22
+Werkzeug==2.0.1
+WTForms==2.3.3
